--- a/SS13Clicker/app/src/main/res/layout/activity_upgrades.xml
+++ b/SS13Clicker/app/src/main/res/layout/activity_upgrades.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.dave.ss13clicker.Upgrades">
 
+    <Button
+        android:id="@+id/btnUpgrad5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="92dp"
+        android:layout_marginTop="273dp"
+        android:text="@string/btnUpgrade5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -14,24 +24,69 @@
         android:textSize="20sp"
         android:layout_marginLeft="108dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="108dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="47dp"
-        android:layout_marginStart="108dp" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="75dp"
-        android:layout_height="34dp"
-        android:entries="@array/spnMult"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="301dp"
-        android:textSize = "10sp"/>
+        android:layout_marginTop="150dp" />
 
     <Button
         android:id="@+id/btnGreyUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btnMoreGrey"
-        tools:layout_editor_absoluteX="106dp"
-        tools:layout_editor_absoluteY="94dp" />
+        android:text="@string/btnToolBox"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:layout_marginLeft="92dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/btnUpgrade4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="92dp"
+        android:layout_marginTop="208dp"
+        android:text="@string/btnUpgrade4"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/btnUpgrade3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="92dp"
+        android:layout_marginTop="140dp"
+        android:text="@string/btnUpgrade3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/btnUpgrade2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="92dp"
+        android:layout_marginTop="74dp"
+        android:text="@string/btnUpgrade2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/lblSpaceBucks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="27dp"
+        android:text="@string/Work"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtWork"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="0dp"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toRightOf="@+id/lblSpaceBucks"
+        app:layout_constraintTop_toTopOf="@+id/lblSpaceBucks" />
+
 </android.support.constraint.ConstraintLayout>
