--- a/ClassSelectionApp/app/src/main/res/layout/activity_choose_class.xml
+++ b/ClassSelectionApp/app/src/main/res/layout/activity_choose_class.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.example.dave.classselectionapp.chooseClass">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="289dp"
+        android:layout_height="33dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/sectionClass"
+        android:textSize="24sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
