--- a/SS13Clicker/app/src/main/res/layout/activity_main.xml
+++ b/SS13Clicker/app/src/main/res/layout/activity_main.xml
@@ -4,111 +4,96 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dave.ss13clicker.MainActivity">
+    tools:context="com.example.dave.ss13clicker.MainActivity"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <Button
         android:id="@+id/btnGreyTide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="129dp"
-        android:layout_marginTop="231dp"
         android:text="@string/btnGreyTide"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="30sp"
+        tools:layout_editor_absoluteY="354dp"
+        tools:layout_editor_absoluteX="70dp" />
 
     <Button
         android:id="@+id/btnUpgrade"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
         android:text="@string/btnUpgrade"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:textSize="14sp"
+        tools:layout_editor_absoluteY="453dp"
+        tools:layout_editor_absoluteX="16dp" />
 
     <Button
         android:id="@+id/btnPromotion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="14dp"
-        android:layout_marginTop="0dp"
+        android:layout_width="140dp"
+        android:layout_height="50dp"
         android:text="@string/btnPromotion"
-        android:textSize="10sp"
-        app:layout_constraintLeft_toRightOf="@+id/btnUpgrade"
-        app:layout_constraintTop_toTopOf="@+id/btnUpgrade" />
+        android:textSize="14sp"
+        tools:layout_editor_absoluteY="453dp"
+        tools:layout_editor_absoluteX="234dp" />
 
     <TextView
         android:id="@+id/lblSpaceBuck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="27dp"
         android:text="@string/Work"
         android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/lblDepartment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/Department"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblRank" />
+        tools:layout_editor_absoluteY="27dp"
+        tools:layout_editor_absoluteX="16dp" />
 
     <TextView
         android:id="@+id/lblRank"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="10dp"
         android:text="@string/Rank"
         android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblSpaceBuck" />
+        tools:layout_editor_absoluteY="59dp"
+        tools:layout_editor_absoluteX="16dp" />
+
+    <TextView
+        android:id="@+id/lblAssist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblassist"
+        android:textSize="18sp"
+        tools:layout_editor_absoluteY="90dp"
+        tools:layout_editor_absoluteX="16dp" />
 
     <TextView
         android:id="@+id/txtCurrency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        app:layout_constraintLeft_toRightOf="@+id/lblSpaceBuck"
-        android:layout_marginLeft="14dp"
-        app:layout_constraintTop_toTopOf="@+id/lblSpaceBuck"
-        android:layout_marginTop="0dp" />
-
-    <TextView
-        android:id="@+id/txtDepartment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="14dp"
-        android:layout_marginTop="0dp"
-        android:textSize="18sp"
-        app:layout_constraintLeft_toRightOf="@+id/lblSpaceBuck"
-        app:layout_constraintTop_toTopOf="@+id/lblDepartment" />
+        tools:layout_editor_absoluteY="27dp"
+        tools:layout_editor_absoluteX="129dp" />
 
     <TextView
         android:id="@+id/txtRank"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="14dp"
         android:textSize="18sp"
-        app:layout_constraintLeft_toRightOf="@+id/lblSpaceBuck"
-        app:layout_constraintTop_toTopOf="@+id/lblRank"
-        android:layout_marginTop="0dp" />
+        tools:layout_editor_absoluteY="59dp"
+        tools:layout_editor_absoluteX="129dp" />
 
-    <Button
-        android:id="@+id/btnJob"
+    <TextView
+        android:id="@+id/txtAssist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="14dp"
-        android:layout_marginTop="0dp"
-        android:text="@string/btnDepart"
-        android:textSize="10sp"
-        app:layout_constraintLeft_toRightOf="@+id/btnPromotion"
-        app:layout_constraintTop_toTopOf="@+id/btnUpgrade" />
+        android:textSize="18sp"
+        tools:layout_editor_absoluteY="90dp"
+        tools:layout_editor_absoluteX="129dp" />
+
+    <Button
+        android:id="@+id/btnHireAssist"
+        android:layout_width="72dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="17dp"
+        android:text="@string/btnHire"
+        android:textSize="8sp"
+        app:layout_constraintLeft_toRightOf="@+id/txtAssist"
+        tools:layout_editor_absoluteY="85dp" />
+
 </android.support.constraint.ConstraintLayout>
