--- a/SS13Clicker/app/src/main/res/layout/activity_upgrades.xml
+++ b/SS13Clicker/app/src/main/res/layout/activity_upgrades.xml
@@ -10,10 +10,10 @@
         android:id="@+id/btnUpgrad5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="92dp"
-        android:layout_marginTop="273dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="277dp"
         android:text="@string/btnUpgrade5"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/btnUpgrade4"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
@@ -26,46 +26,46 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="108dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="150dp" />
+        android:layout_marginTop="79dp" />
 
     <Button
-        android:id="@+id/btnGreyUp"
+        android:id="@+id/btnUpgrade1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btnToolBox"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:layout_marginLeft="92dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/btnUpgrade1"
+        app:layout_constraintLeft_toLeftOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/btnUpgrade4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="92dp"
-        android:layout_marginTop="208dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="206dp"
         android:text="@string/btnUpgrade4"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/btnUpgrade3"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/btnUpgrade3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="92dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="139dp"
         android:text="@string/btnUpgrade3"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/btnUpgrade2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/btnUpgrade2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="92dp"
-        android:layout_marginTop="74dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="76dp"
         android:text="@string/btnUpgrade2"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/btnUpgrade1"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
@@ -88,5 +88,13 @@
         android:textSize="18sp"
         app:layout_constraintLeft_toRightOf="@+id/lblSpaceBucks"
         app:layout_constraintTop_toTopOf="@+id/lblSpaceBucks" />
+
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnBack"
+        tools:layout_editor_absoluteX="147dp"
+        tools:layout_editor_absoluteY="444dp" />
 
 </android.support.constraint.ConstraintLayout>
