--- a/SS13Clicker/app/src/main/res/layout/activity_main.xml
+++ b/SS13Clicker/app/src/main/res/layout/activity_main.xml
@@ -99,10 +99,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/txtRank"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtRank" />
+        app:layout_constraintTop_toBottomOf="@+id/txtRank"
+        app:layout_constraintLeft_toRightOf="@+id/lblAssist"
+        android:layout_marginLeft="10dp" />
 
     <Button
         android:id="@+id/btnHireAssist"
