--- a/SS13Clicker/app/src/main/res/layout/activity_upgrades.xml
+++ b/SS13Clicker/app/src/main/res/layout/activity_upgrades.xml
@@ -6,16 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.example.dave.ss13clicker.Upgrades">
 
-    <Button
-        android:id="@+id/btnUpgrad5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="277dp"
-        android:text="@string/btnUpgrade5"
-        app:layout_constraintLeft_toLeftOf="@+id/btnUpgrade4"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -32,20 +22,20 @@
         android:id="@+id/btnUpgrade1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="7dp"
         android:text="@string/btnUpgrade1"
         app:layout_constraintLeft_toLeftOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/btnUpgrade4"
+        android:id="@+id/btnUpgrade2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
-        android:layout_marginTop="206dp"
-        android:text="@string/btnUpgrade4"
-        app:layout_constraintLeft_toLeftOf="@+id/btnUpgrade3"
+        android:layout_marginTop="76dp"
+        android:text="@string/btnUpgrade2"
+        app:layout_constraintLeft_toLeftOf="@+id/btnUpgrade1"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
@@ -59,13 +49,23 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/btnUpgrade2"
+        android:id="@+id/btnUpgrade4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="0dp"
-        android:layout_marginTop="76dp"
-        android:text="@string/btnUpgrade2"
-        app:layout_constraintLeft_toLeftOf="@+id/btnUpgrade1"
+        android:layout_marginTop="206dp"
+        android:text="@string/btnUpgrade4"
+        app:layout_constraintLeft_toLeftOf="@+id/btnUpgrade3"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/btnUpgrade5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="277dp"
+        android:text="@string/btnUpgrade5"
+        app:layout_constraintLeft_toLeftOf="@+id/btnUpgrade4"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
@@ -94,7 +94,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btnBack"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="444dp" />
+        android:layout_marginTop="19dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnUpgrade5"
+        android:layout_marginLeft="143dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
